# oracle-fiction-engine

./: .gitignore  cli.py  editor.py  generator.py  io_manager.py  main.py  models.py  pyproject.toml  requirements.txt  ui.py
docs/: README.md  diagram.md  extraction_prompt_design.md  idea0.md  plan.md  technical_plan.md
examples/: bad_guys.yaml  config.yaml  crew.yaml  master_roster_arc_a.yaml  tables.yaml
tests/: test_generator.py  test_io_manager.py
